--- a/product_catalog_extend/wizard/product_catalog_wizard.xml
+++ b/product_catalog_extend/wizard/product_catalog_wizard.xml
@@ -8,7 +8,7 @@
             <field name="arch" type="xml">
             <form string="#print Product Catalog Report">
                 <group colspan="4" col="4">
-                    <field name="category_id" widget="selection" colspan="4" />
+                    <field name="category_id" colspan="4" />
                     <field name="pricelist_id" widget="selection" colspan="2"/>
                     <field name="pricelist_id2" widget="selection" colspan="2"/>
                 </group>
