[data_migration/] fix for manage better return product

--- a/data_migration/wizard/file_import_view.xml
+++ b/data_migration/wizard/file_import_view.xml
@@ -144,6 +144,7 @@
                     </group>
                     <group colspan="8" col="8" states="import">
                         <field name="location_id" />
+                        <newline/>
                         <field name="location_dest_id" />
                     </group>
 
