--- a/dt_product_serial/wizard/stock_partial_picking.xml
+++ b/dt_product_serial/wizard/stock_partial_picking.xml
@@ -18,14 +18,17 @@
                     <field name="balance" groups="stock.view_balance"/>
                     <field name="pallet_qty" groups="stock.view_pallet" />
                     <field name="pallet_id" groups="stock.view_pallet" widget="selection" />
-                    
                 </field>
                 <field name="prodlot_id" position="replace">
                     <field name="new_prodlot_code" on_change="onchange_new_prodlot_code(new_prodlot_code, product_id, prodlot_id)" />
                     <field name="prodlot_id" domain="[('product_id', '=', product_id), ('stock_available', '!=', '0')]" invisible="context.get('hide_tracking', False)" attrs="{'required': [('tracking', '=', True), ('new_prodlot_code', '=', False)]}"/>
+                    <field name="line_check" />
                     <field name="split_type" readonly="1"/>
                     <field name="tracking_id" invisible="True" />
                 </field>
+                <button string="_Cancel" position="replace" >
+                    <button name="save_partial" string="_Save" colspan="1" type="object" icon="gtk-floppy"/>
+                </button>
             </field>
         </record>
     </data>
