--- a/sale_order_confirm/wizard/confirmation_view.xml
+++ b/sale_order_confirm/wizard/confirmation_view.xml
@@ -58,7 +58,7 @@
                     <label string="" colspan="2"/>
                     <group col="2" colspan="2">
                         <button icon='gtk-cancel' special="cancel" string="_Cancel" />
-                        <button name="sale_order_confirmated" string="_Confirmated" colspan="1" type="object" icon="gtk-go-forward" />
+                        <button name="sale_order_confirmated" string="_Confirmed" colspan="1" type="object" icon="gtk-go-forward" />
                     </group>
                 </form>
             </field>
