--- a/dt_product_serial/wizard/stock_partial_picking.xml
+++ b/dt_product_serial/wizard/stock_partial_picking.xml
@@ -14,8 +14,12 @@
                     <field name="product_id" readonly="1" />
                 </field>
                 <field name="quantity" position="replace">
+                    <button name="action_add" string="Add" type="object" icon="gtk-add"  attrs="{'invisible': [('split_type', '=', 'single')]}"/>
                     <field name="quantity" attrs="{'readonly': [('split_type', '=', 'single')]}" />
-                    <field name="line_check" />
+                    <button name="action_remove" string="Remove" type="object" icon="gtk-remove"  attrs="{'invisible': [('split_type', '=', 'single')]}"/>
+                    <field name="line_check" invisible="1" />
+                    <button name="action_check" string="Check" type="object" icon="gtk-check" />
+
                     <field name="balance" groups="stock.view_balance"/>
                     <field name="pallet_qty" groups="stock.view_pallet" />
                     <field name="pallet_id" groups="stock.view_pallet" widget="selection" />
