--- a/sale_subscriptions/views/sale_order_menu.xml
+++ b/sale_subscriptions/views/sale_order_menu.xml
@@ -7,6 +7,7 @@
             <field name="res_model">sale.order.line</field>
             <field name="view_type">form</field>
             <field name="view_mode">tree</field>
+            <field name="search_view_id" ref="view_subscription_search"/>
             <field name="view_id" ref="view_subscription_tree"/>
             <field name="context">{'nodelete': '1', 'nocreate': '1'}</field>
             <field name="domain">[('subscription', '=', True), ('state', '=', 'confirmed')]</field>
