new store function on customer

--- a/sale_subscriptions/views/sale_view.xml
+++ b/sale_subscriptions/views/sale_view.xml
@@ -97,7 +97,7 @@
                     <group expand="0" string="Group By...">
                         <filter string="Product" icon="terp-accessories-archiver" domain="[]" context="{'group_by':'product_id'}"/>
                         <filter string="Order" icon="terp-gtk-jump-to-rtl" domain="[]" context="{'group_by':'order_id'}"/>
-                        <filter string="Customer" icon="terp-gtk-jump-to-rtl" domain="[]" context="{'group_by':'customer_id'}"/>
+                        <filter string="Customer" icon="terp-gtk-jump-to-rtl" domain="[]" context="{'group_by':'partner_id'}"/>
                         <filter string="Internal User" icon="terp-personal" domain="[]" context="{'group_by':'user_id'}"/>
                         <filter string="Sales Team" icon="terp-personal" domain="[]" context="{'group_by':'section_id'}"/>
                     </group>
